[gd_scene load_steps=8 format=3 uid="uid://dlrmlkpw214b6"]

[ext_resource type="Texture2D" uid="uid://d21a77mrlpl17" path="res://Assets/DiffucultyFaces/Easy.png" id="1_hfhsn"]
[ext_resource type="PackedScene" uid="uid://b8jpdo05be2vp" path="res://Scenes/Minesweeper.tscn" id="1_qwshj"]
[ext_resource type="Script" uid="uid://b7pmg4pvtjreo" path="res://Scripts/UI.gd" id="1_xjg7p"]
[ext_resource type="Texture2D" uid="uid://fx754d27kd8i" path="res://Assets/DiffucultyFaces/Medium.png" id="2_qwshj"]
[ext_resource type="Texture2D" uid="uid://m8gqmak1wtff" path="res://Assets/DiffucultyFaces/Difficult.png" id="3_48q88"]
[ext_resource type="Texture2D" uid="uid://bc2l3xc2s3r3l" path="res://Assets/ActionFaces/EasyIdle.png" id="4_xjg7p"]
[ext_resource type="FontFile" uid="uid://b7pnpxsli7htf" path="res://Assets/Fonts/G7_Segment_7a.ttf" id="6_48q88"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xjg7p")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="DifficultyButton" type="OptionButton" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
flat = true
alignment = 1
text_overrun_behavior = 2
selected = 0
allow_reselect = true
item_count = 3
popup/item_0/text = "Fácil"
popup/item_0/icon = ExtResource("1_hfhsn")
popup/item_0/id = 0
popup/item_1/text = "Medio"
popup/item_1/icon = ExtResource("2_qwshj")
popup/item_1/id = 1
popup/item_2/text = "Difícil"
popup/item_2/icon = ExtResource("3_48q88")
popup/item_2/id = 2

[node name="FaceTexture" type="TextureRect" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_xjg7p")
expand_mode = 2
stretch_mode = 3

[node name="TimeLabel" type="Label" parent="CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_48q88")
text = "00:00"
horizontal_alignment = 1

[node name="Minesweeper" parent="CenterContainer" instance=ExtResource("1_qwshj")]
position = Vector2(0, 40)

[connection signal="item_selected" from="CenterContainer/HBoxContainer/DifficultyButton" to="." method="_on_difficulty_button_item_selected"]
[connection signal="screen_resized" from="CenterContainer/Minesweeper" to="." method="_on_minesweeper_screen_resized"]
